--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,9 +34,7 @@ jobs:
 
       - name: Create GitHub Release
         id: create_release
-        uses: github-actions/create-release@latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: actions/create-release@v1
         with:
           tag_name: v1.0.0
           release_name: "Version 1.0.0"
@@ -44,6 +42,8 @@ jobs:
             Tämä on ensimmäinen julkaisu pankkiautomaattiprojektista.
           draft: false
           prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
