--- a/.github/workflows/name: C/C++ CI/CI/CI/CD.yml
+++ b/.github/workflows/name: C/C++ CI/CI/CI/CD.yml
@@ -45,6 +45,19 @@ jobs:
   env:
     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+- name: Create GitHub Release
+  id: create_release
+  uses: actions/create-release@v1
+  with:
+    tag_name: v1.0.2 # Päivitä seuraavaan versioon
+    release_name: "Version 1.0.2"
+    body: |
+      Tämä julkaisu sisältää ohjelma.exe-tiedoston.
+    draft: false
+    prerelease: false
+  env:
+    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 - name: Upload Release Asset
   uses: actions/upload-release-asset@v1
   with:
